fix(button): remove white-space and allow overflow

--- a/src/less/bootstrap/button.less
+++ b/src/less/bootstrap/button.less
@@ -17,6 +17,8 @@
   border: solid @oui-button-border-width;
   border-radius: @oui-button-radius;
   background-color: @oui-button-background-color;
+  white-space: normal;
+  overflow: visible;
 
   &-xs,
   &-sm,
